# chatwarstools

./: .gitignore  ArenaCalc.pro  README.md  mainwindow.cpp  mainwindow.h  randomdialog.cpp  randomdialog.h  randomdialog.ui
ArenaCalc/: ArenaCalc.pro  ArenaCalc_en.ts  ArenaCalc_ru.ts  CMakeLists.txt  commonstringholder.cpp  commonstringholder.h  cpugamer.cpp  cpugamer.h  enumclassutil.h  enums.h  gamedialog.cpp  gamedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  randomdialog.cpp  randomdialog.h  randomdialog.ui  randomholder.cpp  randomholder.h  translations.qrc  treenode.cpp  treenode.h  tripletreenode.cpp  tripletreenode.h
